# rust_financial_manager

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  cobertura.xml  diesel.toml  docker-compose.yml  entrypoint.sh  wait-for-postgres.sh
.github/: ci.yml
.github/workflows/: ci.yml  release.yml  rust.yml
Draw.io/: Database_Schema.drawio  Programm Architecture.drawio
docker/: .env  Dockerfile  docker-compose.yml
migrations/2024-07-26-085714_users/: up.sql
migrations/2024-07-26-085837_banks/: down.sql  up.sql
migrations/2024-07-26-090044_transactions/: up.sql
migrations/2024-07-30-165724_csv_converter/: down.sql  up.sql
migrations/2024-08-11-190141_contracts/: up.sql
migrations/2024-08-11-190319_contract_amount_change/: down.sql  up.sql
migrations/2024-08-15-090044_transactions/: up.sql
src/: lib.rs  main.rs  schema.rs  structs.rs  utils.rs
src/database/: db_connector.rs  db_mocking.rs  mod.rs  models.rs  schema.rs
src/routes/: add_bank.rs  bank.rs  bank_contract.rs  bank_transaction.rs  base.rs  contracts.rs  create_contract.rs  delete_user.rs  error_page.rs  get_data.rs  get_graph_data.rs  help_functions.rs  home.rs  login.rs  mod.rs  register.rs  settings.rs  update_csv.rs  update_date_range.rs  updated_csv.rs  upload_csv.rs
src/utils/: add_to_contract.rs  appstate.rs  contract_utils.rs  create_contract.rs  delete_utils.rs  display_utils.rs  get_utils.rs  insert_utiles.rs  loading_utils.rs  merge_contracts.rs  mod.rs  (+4 more)
static/: base.js  login.js  register.js  script.js  styles.css
templates/: add_bank.html.tera  add_transaction.html.tera  bank.html.tera  bank_contract.html.tera  bank_contracts.html.tera  bank_transaction.html.tera  base.html.tera  contract.html.tera  dashboard.html.tera  error_page.html.tera  home.html.tera  index.html.tera  login.html.tera  register.html.tera  settings.html.tera
tests/: mod.rs  test_help_functions.rs
(+27 files in other folders)
