[package]
name = "rust_financial_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.1", features = ["postgres", "r2d2", "chrono"] }
bcrypt = "0.15.1"
dotenvy = "0.15"
regex = "1.10.5"
dotenv = "0.15"
urlencoding = "2.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
rocket = "0.5.0-rc.2"
rocket_db_pools = { version = "0.2.0", features = ["diesel_postgres"] }
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
